# box_office

./: .gitignore  .gitmodules  README.md  main.py  object_list.py
data/in/: bunny_classy.off  bunny_classy.ol  bunny_classy_head.ol  bunny_classy_head.txt  down__bbox_twoturn.txt  down__testing_2.ol  down__testing_2_random_sampling_0.2.txt  one_pipe_01.txt  one_pipe_01_cut.txt
docker/: boxoffice-entrypoint.sh  boxoffice.Dockerfile  docker-compose.yml
modules/wrapper_cgal/: CMakeLists.txt  Evaluator.cpp  Evaluator.h  helpers.h  main.cpp  trim.h  typedefs.h
modules/wrapper_cgal/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
python/: base_verification.py  bbox.py  down.py  evaluation.py  main.py  main_down.py  main_up.py  other.py  pointcloud.py  temp.py  up.py
python/tests/: test_io.py  tests.py
python/tests/data/: head_test.ol  head_test.pcs  pig.off  tail_test.ol  tail_test.pcs
python/zombie/: main.py
src/: CMakeLists.txt  Evaluator.cpp  algorithm.h  helpers.cpp  helpers.h  main.cpp  typedefs.h
src/code/: BoxEntity.cpp  BoxEntity.h  BoxScene.cpp  BoxScene.h  CMakeLists.txt  Evaluator.cpp  Evaluator.h  FitAndSplitHierarchy.h  SplitStrategies.cpp  SplitStrategies.h  SplitStrategies.ipp  TargetSetting.cpp  TargetSetting.h  algorithm.cpp  algorithm.h  helpers.cpp  helpers.h  helpers_nobind.cpp  helpers_nobind.h  mvbb_algorithm.cpp  mvbb_algorithm.h  mvbb_algorithms.cpp  mvbb_algorithms.h  pybind_helpers.cpp  pybind_helpers.h  rasterizer..cpp  rasterizer..h  rasterizer.cpp  rasterizer.h  rasterizer.ipp  rasterizer_definitions.cpp  rasterizer_definitions.h  result_writer.cpp  result_writer.h  typedefs.h  xy_grid.cpp  xy_grid.h  xy_grid.ipp
src/tests/: CMakeLists.txt  algorithm_test.cpp  bbox_minimal.cpp  data.cpp  data.h  data.ipp  test_bbox.cpp  test_debug.cpp  test_discretization.cpp  test_helpers.cpp  test_io.cpp  test_python_interface.cpp  test_triplesplit.cpp  test_twosplit.cpp  test_typedefs.cpp  typedefs.cpp  valgrind_decompose_target.cpp
src/tests/data/: license.txt
src/tests/files/: 404.txt  424.txt  624_rot.txt  boxes.ol  bunny_classy_head.txt  evaluation_triplesplit.txt  pig_bbox.off
tests/: test_io.py  tests.py
tests/data/: head_test.pcs  tail_test.pcs
